--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -46,18 +46,81 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="accentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="accentForm.Designer.cs">
+      <DependentUpon>accentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddaccentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddaccentForm.Designer.cs">
+      <DependentUpon>AddaccentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddFileToLexGroup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFileToLexGroup.Designer.cs">
+      <DependentUpon>AddFileToLexGroup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Author.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Author.Designer.cs">
+      <DependentUpon>Author.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EndDictionary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EndDictionary.Designer.cs">
+      <DependentUpon>EndDictionary.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="KakPolzovatsyaProgrammoi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KakPolzovatsyaProgrammoi.Designer.cs">
+      <DependentUpon>KakPolzovatsyaProgrammoi.cs</DependentUpon>
+    </Compile>
     <Compile Include="LEXGROUP.cs" />
+    <Compile Include="MorphDictionary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MorphDictionary.Designer.cs">
+      <DependentUpon>MorphDictionary.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="word.cs" />
+    <EmbeddedResource Include="accentForm.resx">
+      <DependentUpon>accentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddaccentForm.resx">
+      <DependentUpon>AddaccentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddFileToLexGroup.resx">
+      <DependentUpon>AddFileToLexGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Author.resx">
+      <DependentUpon>Author.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EndDictionary.resx">
+      <DependentUpon>EndDictionary.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KakPolzovatsyaProgrammoi.resx">
+      <DependentUpon>KakPolzovatsyaProgrammoi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MorphDictionary.resx">
+      <DependentUpon>MorphDictionary.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
